Fix bug entering Tamil on Android using Google Handwriting Input

A bug was reported when using the Android Google Handwriting Input IME to enter
certain patterns of Tamil characters immediately after a space. The character
sequence that produces the bug is " ேவ" (\u0bc7\u0bb5). The first character
is a joining character that attaches itself to the previous character (if any).
The IME first sets a composition containing the first character, and then
replaces the composition range with a string containing both characters
together. The behavior on trunk has changed a bit recently (perhaps due to
https://chromium-review.googlesource.com/c/chromium/src/+/807151); the current
behavior is that the first character ends up being duplicated. The resulting
composition range is also incorrect.

The fix is to avoid canonicalizing the selection (using VisibleSelection) when
converting the composition range to a selection and back. Canonicalization snaps
the selection to a grapheme cluster boundary, which is apparently not the
desired behavior in this case (I'm not super familiar with how Tamil input is
supposed to work, but the reporter of the bug says our behavior is wrong, and we
also don't match the behavior of Android EditText widgets, which is often
problematic).

Bug: 792713
Change-Id: Ie4975ca6b027d34c97f50c8d4732f9258c26fb2d